# Local-App-Software-2026

./: .cursorignore  .gitignore  99-sls-fabric-usb.rules  AGENTS.md  CMakeLists.txt  GUI_HANDOFF.md  LICENSE  README.md  RocketBox-spec.md  booth-port0.conf  booth-port1.conf  booth-shared.conf  ces-demo.conf  readme2.md  vcpkg.json
.github/workflows/: ci.yml  pages.yml  release.yml
apps/demo/: CMakeLists.txt  booth_log.h  demo_config.cpp  demo_display.cpp  demo_display.h  fabric_link_policy.h  fabric_session_message.h  identity_profile.cpp  identity_profile.h  peer_roster.cpp  peer_roster.h  receive_payload.cpp  session_handshake.h  session_listener.cpp  session_listener.h  transfer_controller.cpp  transfer_controller.h  transfer_orchestrator.cpp  transfer_orchestrator.h
apps/gtk/: CMakeLists.txt  demo_config.cpp  demo_config.h  demo_styles.cpp  demo_styles.h  fabric_tar_pack.cpp  fabric_tar_pack.h  main.cpp  main_window.cpp  main_window.h  transfer_controller.cpp  transfer_controller.h
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
apps/web/public/: booth-port0.conf  booth-port1.conf
apps/web/sim/: fabric_hub.ts  fabric_sim.ts  fabric_sim_device.ts  fabric_sim_session.ts  index.ts
apps/web/src/: App.tsx  index.css  main.tsx  transport_factory.ts  vite-env.d.ts  webusb.d.ts
apps/web/src/components/: ActivityMonitor.tsx  ConnectionLed.tsx  ConnectionPanel.tsx  EventLogDialog.tsx  Header.tsx  IncomingDialog.tsx  LandingPage.tsx  ProgressBar.tsx  RosterPanel.tsx  SettingsDialog.tsx  SpeedMonitor.tsx  TransferProgressPanel.tsx
apps/web/src/hooks/: useRocketBox.ts  useSessionRates.ts
apps/web/src/lib/: activity_history.ts  announce_note.test.ts  announce_note.ts  booth_log.test.ts  booth_log.ts  booth_log_diagnostics.test.ts  booth_log_diagnostics.ts  booth_log_shipper.ts  booth_network.ts  collect_drop_files.ts  config.test.ts  config.ts  fabric_errors.ts  fabric_frame.test.ts  fabric_frame.ts  fabric_link.test.ts  fabric_link.ts  fabric_port.test.ts  fabric_port.ts  fabric_protocol.test.ts  fabric_protocol.ts  fabric_session.test.ts  fabric_session.ts  fabric_transport.ts  fabric_usb.ts  format.test.ts  format.ts  peer_roster.test.ts  peer_roster.ts  pwa_url.test.ts  pwa_url.ts  roster_slots.test.ts  roster_slots.ts  session_handshake.test.ts  session_handshake.ts  session_parity.test.ts  session_rate_stats.test.ts  session_rate_stats.ts  speed_history.test.ts  speed_history.ts  (+10 more)
apps/web/src/styles/: app.css
apps/web/test/: fixtures.ts
apps/wx/: CMakeLists.txt  app_icon.cpp  app_icon.h  connection_panel.cpp  connection_panel.h  event_log_dialog.cpp  event_log_dialog.h  fabric_device_picker.cpp  fabric_device_picker.h  incoming_dialog.cpp  incoming_dialog.h  main.cpp  main_frame.cpp  main_frame.h  roster_panel.cpp  roster_panel.h  settings_dialog.cpp  settings_dialog.h  speed_monitor.cpp  speed_monitor.h  transfer_progress_panel.cpp  transfer_progress_panel.h
cmake/: RUNNING.txt  macos_fixup_bundle.cmake  packaging.cmake  rocketbox_windows_vcpkg.cmake  windows_fixup_install.cmake  windows_fixup_install.cmake.in
cmake/debian/: postinst  rocketbox.desktop
core/: CMakeLists.txt
core/include/: usb_protocol.h  usb_transfer.h
core/src/: usb_transfer_core.cpp
demo-config/: README.txt  SLS_USB_DEVICE.cat  WINDOWS-USB.txt  port0.conf  port1.conf  shared.conf  sls_usb_device.inf
docs/: ARCHITECTURE.md  BUILD.md  DEPLOYMENT.md  INSTALL.md  PROTOCOL.md  WESTCOAST.md
lib/session/: CMakeLists.txt  announce_note.cpp  announce_note.h  booth_display.cpp  booth_display.h  booth_log.cpp  fabric_meta_file.cpp  fabric_meta_file.h  fabric_port.cpp  fabric_port.h  fabric_session_message.cpp  fabric_tar_pack.cpp  fabric_tar_pack.h  identity_profile.cpp  identity_profile.h  link_status.cpp  link_status.h  peer_roster.cpp  peer_roster.h  platform_util.cpp  platform_util.h  receive_payload.h  session_config.cpp  session_config.h  session_handshake.cpp  session_listener.cpp  session_listener.h  session_rate_stats.cpp  session_rate_stats.h  session_role.cpp  session_role.h  transfer_controller.cpp  transfer_controller.h  transfer_orchestrator.cpp  transfer_orchestrator.h
protocols/: file-transfer.md  session.md
scripts/: build-appimage.sh  build-dmg.sh  find-windows-installer.ps1  generate-icons.sh  generate-macos-icon.sh  install-wx-deps.sh  launch-booth.sh  launch-ces-demo.sh  launch-rocketbox-cad.sh  package-pwa.sh  release-version-from-tag.sh  serve-web-spike.sh  setup-usb-access.sh  verify-macos-bundle.sh  verify-windows-install.ps1  verify-windows-nsis.ps1
sim/: CMakeLists.txt
sim/include/: fabric_sim.h
sim/src/: fabric_sim.cpp
tests/: CMakeLists.txt  hardware_main.cpp  test_util.cpp  test_util.h  unit_main.cpp
tests/fixtures/session/: offer.sample.msg
tests/hardware/: hw_fixture.h  test_transfer_hw.cpp
tests/integration/: orchestrator_harness.h  test_session_handshake.cpp
tests/unit/: test_announce_note.cpp  test_booth_display.cpp  test_core_tuning.cpp  test_demo_config.cpp  test_demo_display.cpp  test_fabric_link_policy.cpp  test_fabric_port.cpp  test_fabric_sim.cpp  test_fabric_tar_pack.cpp  test_identity_profile.cpp  test_link_status.cpp  test_meta_file.cpp  test_peer_roster.cpp  test_receive_payload.cpp  test_session_config.cpp  test_session_fixtures.cpp  test_session_handshake.cpp  test_session_message.cpp  test_session_rate_stats.cpp  test_session_role.cpp
tools/: CMakeLists.txt  booth_cli.cpp  fabric_session_test.cpp  send_repro.cpp  usb_loopback_test.cpp  usb_pair_test.cpp  usb_probe.cpp
